--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head><title>Sample Git</title></head> 
 <body> 
 <h1>This is header</h1> 
-<p>This is new feature</p> 
+<p>This is new feature</p>
+<p>This is another new feature</h1> 
 <p>This is paragraph2</p> 
 </body>
