--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML> 
-<html lang="TH"> 
+<html lang="TH1"> 
 <head><title>Sample Git!!!</title></head> 
 <body> 
 <h1>This is header</h1> 
